# teapot-api-django

./: .gitignore  Makefile  README.md  docker-compose.yml  localstack_setup.sh  manage.py  pyproject.toml
address/: exceptions.py  models.py  serializers.py  urls.py  views.py
address/migrations/: 0001_initial.py  0002_remove_address_id_address_address_id.py
banking/: exceptions.py  models.py  serializers.py  urls.py  views.py
banking/migrations/: 0001_initial.py
category/: exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
category/migrations/: 0001_initial.py  0002_auto_20230512_0239.py
payment/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_paymentinfo_payment_id.py
product/: IMAGES.md  models.py  s3_client.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_category_image.py
teapot_api/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  authtoken.py  backends.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_appuser_managers_alter_appuser_user_id.py
utils/: error_responses.py  fetchers.py
