[tool.poetry]
name = "teapot-django"
version = "0.1.0"
description = ""
authors = ["Kobe Li <likobe23@gmail.com>"]
readme = "README.md"
packages = [{include = "teapot_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
